# SeaMesh

./: .gitignore  CMakeLists.txt  README.md  SeaMeshEnv.sh  pyproject.toml
data/Klimadatastyrelsen/TopografiskLandpolygon/: README
data/Topo-bathy/shape_format/data/: Kystlinie.shp  Kystlinie.shp.xml
scripts/: GmshMeshGenerator.py  MergeJutlandLinestrings.py  ShowBathy.py  ShowShapeFile.py  ShowShapeFileGeoPandas.py  TriangleMeshGenerator.py
src/: .clang-format  BoostGeometryCreator.h  BoostGeometryRtree.h  BoostGeometryTypes.h  BoostGeometryUtil.cpp  BoostGeometryUtil.h  BoostPolygonTypes.hpp  CMakeLists.txt  ConversionUtil.h  GeoTiffReader.h  Logger.h  Morton2D.h  Morton3D.h  MortonTest.h  MortonUtil.cpp  MortonUtil.h  OcTree.h  OctreeNode.h  Profiler.cpp  Profiler.h  QuadTree.cpp  QuadTree.h  QuadTreeBuilder.cpp  QuadTreeBuilder.h  QuadTreeBuilderBase.cpp  QuadTreeBuilderBase.h  QuadTreePointsInserter.cpp  QuadTreePointsInserter.h  QuadTreeSeaBuilder.cpp  QuadTreeSeaBuilder.h  QuadTreeSearch.cpp  QuadTreeSearch.h  ShapeFileReader.h  ShapeFileReader.hpp  ShapeFileToBoostGeometry.hpp  ShapeFileUtil.h  ShapeFileUtil.hpp  ShowBathy.py  Timer.h  TreesUtil.cpp  (+23 more)
src/test/: CMakeLists.txt
src/test/test01_boost_rtree/: CMakeLists.txt  main.cpp
src/test/test02_boost_polygon_voronoi/: CMakeLists.txt  main.cpp
util/: pyproject.toml  tiff_to_vti.py
