[project]
name = "seamesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cartopy>=0.25.0",
    "geopandas>=1.1.1",
    "gmsh>=4.14.1",
    "matplotlib>=3.10.6",
    "networkx>=3.4.2",
    "owslib>=0.34.1",
    "rasterio>=1.4.3",
    "tetgen>=0.6.7",
    "triangle>=20250106",
    "xarray>=2025.6.1",
]

[tool.uv.workspace]
members = [
    "util",
]
